Fix $.scrollParent when the root element has default overflow

--- a/assets/stylesheets/global/_base.scss
+++ b/assets/stylesheets/global/_base.scss
@@ -7,8 +7,9 @@ html {
 }
 
 body {
-  margin: 0;
   height: 100%;
+  margin: 0;
+  overflow: auto;
   font: normal 1em/1.7 $baseFont;
   color: $textColor;
   word-wrap: break-word;
